# rust_pokemon_cli

./: Cargo.toml  README.md
src/: lib.rs  main.rs
