[package]
name = "rust_pokemon_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
anyhow = "1.0"
log = "0.4.0"
env_logger = "0.9.0"
reqwest = { version = "0.11", features = ["blocking","json"] }
serde_json = "1"
